// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <ProductTitle /> Debe mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Sin Imagen
  </span>
</div>
`;

exports[`Test in <ProductTitle /> Debe mostrar el componente correctamente con el titulo 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
